force-app/main/default/objects/Subscription_Activation__c/Subscription_Activation__c.object-meta.xml
<CustomObject>
    <label>Subscription Activation</label>
    <nameField>
        <displayFormat>SUB-{0000}</displayFormat>
        <label>Subscription #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Activations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>