force-app/main/default/objects/Subscription_Activation__c/fields/Account_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Formula__c</fullName>
    <description>NICC-024063
***THIS FIELD IS DISPLAYED IN THE PARTNER COMMUNITY***
Originally created to display the name of the account record related to the Subscription Activation record to Partner Community users.  This allows the Partner Community users to see the Account Name without giving them access to the Account object.</description>
    <formula>Account__r.Name</formula>
    <inlineHelpText>The name of the account related to this subscription activation record</inlineHelpText>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>