force-app/main/default/objects/Subscription_Activation__c/fields/Activated_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Activated_Quantity__c</fullName>
    <label>Activated Quantity</label>
    <summarizedField>Subscription_Activation_Transaction__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Subscription_Activation_Transaction__c.Status__c</field>
        <operation>equals</operation>
        <value>Live</value>
    </summaryFilterItems>
    <summaryForeignKey>Subscription_Activation_Transaction__c.Subscription_Activation_No__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>