force-app/main/default/objects/Subscription_Activation__c/fields/Activity_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Activity_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity Line Item</label>
    <referenceTo>Activity_Line_Item__c</referenceTo>
    <relationshipLabel>Subscription Activations</relationshipLabel>
    <relationshipName>Subscription_Activations</relationshipName>
    <type>Lookup</type>
</CustomField>