force-app/main/default/objects/Subscription_Activation__c/fields/Backlog_Detail__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Detail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Additional detail on when this subscription will go live or why there is a delay on scheduling.</inlineHelpText>
    <label>Backlog Detail</label>
    <type>TextArea</type>
</CustomField>