force-app/main/default/objects/Subscription_Activation__c/fields/Backlog_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Quantity__c</fullName>
    <description>NICC-035500 - Changed Decimal Places</description>
    <formula>Contracted_Quantity__c - Activated_Quantity__c - Canceled_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Backlog Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>