force-app/main/default/objects/Subscription_Activation__c/fields/Backlog_Value__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Value__c</fullName>
    <formula>Backlog_Quantity__c *  Sales_Prices__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Backlog Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>