force-app/main/default/objects/Subscription_Activation__c/fields/Billing_Contract__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Contract</label>
    <referenceTo>Billing_Contract__c</referenceTo>
    <relationshipLabel>Subscription Activations</relationshipLabel>
    <relationshipName>Subscription_Activations</relationshipName>
    <type>Lookup</type>
</CustomField>