force-app/main/default/objects/Subscription_Activation__c/fields/Contracted_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Quantity__c</fullName>
    <description>NICC-035500 - Changed Decimal Places</description>
    <label>Contracted Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>