force-app/main/default/objects/Subscription_Activation__c/fields/Customer_Contact_Email_Formula__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_Email_Formula__c</fullName>
    <description>NICC-024137
***THIS FIELD IS DISPLAYED IN THE PARTNER COMMUNITY***
Originally created to display the name of the e-mail address of the primary contact that the Amadeus Hospitality Partner should contact. This allows the Partner Community users to see the Customer Contact Email without giving them access to the Contact object.</description>
    <formula>Customer_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The email address of the Customer Contact</inlineHelpText>
    <label>Customer Contact Email</label>
    <type>Text</type>
</CustomField>