force-app/main/default/objects/Subscription_Activation__c/fields/Notes_to_Partners__c.field-meta.xml
<CustomField>
    <fullName>Notes_to_Partners__c</fullName>
    <description>NICC-024063

***THIS FIELD IS DISPLAYED IN THE PARTNER COMMUNITY***
This field is automatically populated with the value from the Notes to Partners field on the Opportunity related to this Subscription Activation record

This field is automatically populated by the &quot;AH_SubscriptionActivationTriggerHandler&quot; Apex Class</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Important information for Amadeus Hospitality Partners</inlineHelpText>
    <label>Notes to Partners</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>