force-app/main/default/objects/Subscription_Activation__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-023846 - Changed data type from Master-Detail to Lookup</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Subscription Activations</relationshipLabel>
    <relationshipName>Subscriptions_Go_Live</relationshipName>
    <type>Lookup</type>
</CustomField>