force-app/main/default/objects/Subscription_Activation__c/fields/Opportunity_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name_Formula__c</fullName>
    <description>NICC-024063
***THIS FIELD IS DISPLAYED IN THE PARTNER COMMUNITY***
Originally created to display the name of the opportinity record related to the Subscription Activation record to Partner Community users. This allows the Partner Community users to see the opportunity name without giving them access to the opportunity object.</description>
    <formula>Opportunity__r.Name</formula>
    <inlineHelpText>The name of the opportunity related to this subscription activation record</inlineHelpText>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>