force-app/main/default/objects/Subscription_Activation__c/fields/Opportunity_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number_Formula__c</fullName>
    <description>NICC-024063
***THIS FIELD IS DISPLAYED IN THE PARTNER COMMUNITY***
Originally created to display the Opportunity Number of the opportunity record related to the Subscription Activation record to Partner Community users. This allows the Partner Community users to see the Opportunity Number without giving them access to the Account object.</description>
    <formula>Opportunity__r.Opportunity_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The opportunity number of the opportunity related to this subscription activation record</inlineHelpText>
    <label>Opportunity Number</label>
    <type>Text</type>
</CustomField>