force-app/main/default/objects/Subscription_Activation__c/fields/Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-023777
This field is automatically populated with the Account that appears in the &quot;Partner Account&quot; field on the Product record that is related to this Subscription Activation record.

This field is automatically populated by the &quot;AH_SubscriptionActivationTriggerHandler&quot; Apex Class</description>
    <inlineHelpText>This field is automatically populated with the Account that appears in the &quot;Partner Name&quot; field on the Product record that is related to this Subscription Activation record.  This record is shared to Partner Community Users that belong to this Account.</inlineHelpText>
    <label>Partner Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Subscription Activations (Partner Name)</relationshipLabel>
    <relationshipName>Subscription_Activations</relationshipName>
    <type>Lookup</type>
</CustomField>