force-app/main/default/objects/Subscription_Activation__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>