force-app/main/default/objects/Subscription_Activation__c/validationRules/Canceled_Live_Quanity_Greater_Contract.validationRule-meta.xml
<ValidationRule>
    <fullName>Canceled_Live_Quanity_Greater_Contract</fullName>
    <active>true</active>
    <description>Validation rule to ensure the live and/or canceled quantity isn&apos;t larger than the contracted quantity.</description>
    <errorConditionFormula>AND( Opportunity__r.Enterprise_License__c = FALSE,(Canceled_Quantity__c + Activated_Quantity__c) &gt; Contracted_Quantity__c)</errorConditionFormula>
    <errorMessage>Activated/Canceled Quantity cannot be greater than the Contracted Quantity</errorMessage>
</ValidationRule>