force-app/main/default/objects/Subscription_Activation__c/listViews/All_Pending_Subscriptions.listView-meta.xml
<ListView>
    <fullName>All_Pending_Subscriptions</fullName>
    <columns>NAME</columns>
    <columns>Group__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Project__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Backlog_Value__c</columns>
    <columns>Backlog_Reason__c</columns>
    <columns>Backlog_Detail__c</columns>
    <columns>Contracted_Quantity__c</columns>
    <columns>Backlog_Quantity__c</columns>
    <columns>Activity_Line_Item__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Backlog_Quantity__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <label>All Pending Subscriptions</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>