force-app/main/default/objects/Subscription_Activation__c/listViews/CleanUp.listView-meta.xml
<ListView>
    <fullName>CleanUp</fullName>
    <booleanFilter>(1 OR 2 OR (3 AND 4)) AND 5 AND 6</booleanFilter>
    <columns>Product_Line__c</columns>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>Group__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Account__c</columns>
    <columns>Account_Address_Formula__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Status__c</columns>
    <columns>Billing_Contract__c</columns>
    <columns>Activity_Line_Item__c</columns>
    <columns>Project__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Project_Manager__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Group__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Product_Line__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Product_Line__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Product_Code__c</field>
        <operation>notEqual</operation>
        <value>VEN-CERT-SUB-01,SO-HSINT.MVIPTV</value>
    </filters>
    <filters>
        <field>Group__c</field>
        <operation>notEqual</operation>
        <value>Media Solutions,Web Solutions,BI,RES,GMS</value>
    </filters>
    <label>PO - CleanUp?</label>
    <sharedTo>
        <role>ClientServices</role>
    </sharedTo>
</ListView>