force-app/main/default/objects/Subscription_Activation__c/listViews/P_Beta_Target_Forecast_Web.listView-meta.xml
<ListView>
    <fullName>P_Beta_Target_Forecast_Web</fullName>
    <columns>Project__c</columns>
    <columns>Forecast_Live_Date__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>Status__c</columns>
    <columns>Region__c</columns>
    <columns>NAME</columns>
    <columns>Product_Name__c</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Group__c</field>
        <operation>equals</operation>
        <value>Web Solutions</value>
    </filters>
    <filters>
        <field>Project_Manager__c</field>
        <operation>contains</operation>
        <value>shannon</value>
    </filters>
    <filters>
        <field>Product_Name__c</field>
        <operation>notContain</operation>
        <value>cookie consent,digital marketing</value>
    </filters>
    <label>P - Beta Target Forecast - Web</label>
</ListView>