force-app/main/default/objects/Subscription_Activation__c/listViews/Partner_All_Projects.listView-meta.xml
<ListView>
    <fullName>Partner_All_Projects</fullName>
    <columns>NAME</columns>
    <columns>Product_Code__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Account_Number_Formula__c</columns>
    <columns>Account_Name_Formula__c</columns>
    <columns>Opportunity_Number_Formula__c</columns>
    <columns>Opportunity_Name_Formula__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Canceled,Partially Installed,Partially Canceled</value>
    </filters>
    <filters>
        <field>Partner_Name__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Partner All Projects</label>
</ListView>