force-app/main/default/objects/Subscription_Activation__c/listViews/Partner_Open_Project.listView-meta.xml
<ListView>
    <fullName>Partner_Open_Project</fullName>
    <columns>NAME</columns>
    <columns>Product_Code__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Account_Number_Formula__c</columns>
    <columns>Account_Name_Formula__c</columns>
    <columns>Opportunity_Number_Formula__c</columns>
    <columns>Opportunity_Name_Formula__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Not Installed</value>
    </filters>
    <label>Partner Open Project</label>
</ListView>