force-app/main/default/objects/Subscription_Activation__c/listViews/Partner_Open_Project_Non_Hilton.listView-meta.xml
<ListView>
    <fullName>Partner_Open_Project_Non_Hilton</fullName>
    <columns>NAME</columns>
    <columns>Product_Name__c</columns>
    <columns>Account_Name_Formula__c</columns>
    <columns>Opportunity_Name_Formula__c</columns>
    <columns>Customer_Contact_Formula__c</columns>
    <columns>Customer_Contact_Email_Formula__c</columns>
    <columns>Forecast_Live_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Not Installed</value>
    </filters>
    <filters>
        <field>Product_Name__c</field>
        <operation>notContain</operation>
        <value>Hilton</value>
    </filters>
    <label>Partner Open Project - Non Hilton</label>
    <sharedTo>
        <group>NISFDCSysAdmin</group>
        <portalRole>SertifiIncPartnerUser</portalRole>
    </sharedTo>
</ListView>