force-app/main/default/objects/Subscription_Activation__c/listViews/PO_Audit_Partially_Installed.listView-meta.xml
<ListView>
    <fullName>PO_Audit_Partially_Installed</fullName>
    <columns>NAME</columns>
    <columns>Group__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Project__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Backlog_Value__c</columns>
    <columns>Contracted_Quantity__c</columns>
    <columns>Activated_Quantity__c</columns>
    <columns>Backlog_Quantity__c</columns>
    <columns>Canceled_Quantity__c</columns>
    <columns>Activity_Line_Item__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Product_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Installed/Canceled,Partially Installed</value>
    </filters>
    <filters>
        <field>Activity_Line_Item__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Backlog_Quantity__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Product_Name__c</field>
        <operation>notEqual</operation>
        <value>Hilton Worldwide - Delphi.fdc Enterprise Purchase of Licenses-Project</value>
    </filters>
    <filters>
        <field>Product_Name__c</field>
        <operation>contains</operation>
        <value>hrm</value>
    </filters>
    <label>PO - Audit - Partially Installed</label>
    <sharedTo>
        <group>PSA_Project_Office</group>
    </sharedTo>
</ListView>