force-app/main/default/objects/Subscription_Activation__c/listViews/PO_CleanUp_Region_AP.listView-meta.xml
<ListView>
    <fullName>PO_CleanUp_Region_AP</fullName>
    <columns>Product_Line__c</columns>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>Group__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Account__c</columns>
    <columns>Account_Address_Formula__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Status__c</columns>
    <columns>Billing_Contract__c</columns>
    <columns>Activity_Line_Item__c</columns>
    <columns>Project__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Project_Manager__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>AP,APAU</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2022 12:00 AM</value>
    </filters>
    <label>PO - Audit - AP Region</label>
    <sharedTo>
        <group>PSA_Project_Office</group>
    </sharedTo>
</ListView>