force-app/main/default/objects/Subscription_Activation__c/listViews/PO_CleanUp_S_C_instead_of_SO.listView-meta.xml
<ListView>
    <fullName>PO_CleanUp_S_C_instead_of_SO</fullName>
    <columns>Product_Line__c</columns>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>Group__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Account__c</columns>
    <columns>Account_Address_Formula__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Status__c</columns>
    <columns>Billing_Contract__c</columns>
    <columns>Activity_Line_Item__c</columns>
    <columns>Project__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Project_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Group__c</field>
        <operation>equals</operation>
        <value>Sales and Catering</value>
    </filters>
    <filters>
        <field>Product_Line__c</field>
        <operation>startsWith</operation>
        <value>HotSOS</value>
    </filters>
    <label>PO - Audit - S&amp;C instead of SO</label>
    <sharedTo>
        <group>PSA_Project_Office</group>
    </sharedTo>
</ListView>